--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hyper = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+http = "1.1.0"
+http-body-util = "0.1"
+hyper = { version = "1", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1"
+bytes = "1.6.0"
+url = "2.5.0"
+nu-cli = "0.101.0"
+nu-cmd-lang = "0.101.0"
+nu-engine = "0.101.0"
+nu-parser = "0.101.0"
+nu-protocol = "0.101.0"
+
+[dev-dependencies]
+tokio-test = "0.4"
