--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ serde_json = "1"
 http = "1.1.0"
 http-body-util = "0.1"
 hyper = { version = "1", features = ["full"] }
+clap = { version = "4", features = ["derive"] }
 hyper-util = { version = "0.1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
@@ -22,3 +23,4 @@ nu-protocol = "0.101.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
+tempfile = "3.10.1"
