--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ nu-command = "0.101.0"
 nu-engine = "0.101.0"
 nu-parser = "0.101.0"
 nu-protocol = "0.101.0"
+nu-cmd-extra = "0.101.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
