--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ nu-command = "0.101.0"
 nu-engine = "0.101.0"
 nu-parser = "0.101.0"
 nu-protocol = "0.101.0"
+tokio-rustls = "0.26.1"
+rustls = "0.23.23"
+rustls-pemfile = "2.2.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
