feat: add a .static built-in command to facilitate static file serving (#6)
### Serving Static Files

You can serve static files from a directory using the `.static` command. This
command takes two arguments: the root directory path and the request path.

When you call `.static`, it sets the response to serve the specified file, and
any subsequent output in the closure will be ignored. The content type is
automatically inferred based on the file extension (e.g., `text/css` for `.css`
files).

Here's an example:

```bash
$ http-nu :3001 '{|req| .static "/path/to/static/dir" $req.path}'
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
+tokio-util = { version = "0.7", features = ["io"] }
 
 bytes = "1.6.0"
 url = "2.5.0"
@@ -41,6 +42,7 @@ nu-protocol = "0.101.0"
 tokio-rustls = "0.26.1"
 rustls = "0.23.23"
 rustls-pemfile = "2.2.0"
+hyper-staticfile = "0.10.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
