--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ tokio-rustls = "0.26.1"
 rustls = "0.23.23"
 rustls-pemfile = "2.2.0"
 hyper-staticfile = "0.10.1"
+scru128 = { version = "3", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
