--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -4,23 +4,33 @@ on:
   push: {}
 
 jobs:
-  hello:
-    name: Hello Dagger
+  build:
+    name: Build & Release Binaries
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Boot the Dagger Engine inside the runner, pinned to v0.18.10
+      # 1) Boot the Dagger Engine inside the runner, pinned to 0.18.10
       - name: Setup Dagger
-        uses: dagger/dagger-for-github@8.0.0    # drop the leading “v” here
+        uses: dagger/dagger-for-github@8.0.0    # correct tag per GitHub Releases :contentReference[oaicite:2]{index=2}
         with:
-          version: "0.18.10"
+          version: "0.18.10"                     # matches registry.dagger.io/engine:v0.18.10 :contentReference[oaicite:3]{index=3}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
       # 2) Run a tiny Alpine container and print "Hello, World"
       - name: Hello from Alpine
         shell: dagger {0}
         run: |
-          container | from alpine
-            | with-new-file /hello.txt "Hello, World"
-            | with-exec cat /hello.txt
+          # single-line pipeline fixes indentation syntax error
+          container | from alpine \
+            | with-new-file /hello.txt "Hello, World" \
+            | with-exec cat /hello.txt \
             | stdout
+
+      # 3) (Optional) Archive your outputs
+      - name: Package Artifacts
+        shell: dagger {0}
+        run: |
+          container | from alpine \
+            | with-new-file /dummy.txt "This simulates your real binaries" \
+            | with-exec tar czf /artifacts.tar.gz /dummy.txt \
+            | export-file /artifacts.tar.gz artifacts.tar.gz
