--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -49,4 +49,4 @@ jobs:
             --title "Experiment Release ${timestamp}" \
             --notes "Automated experiment build from commit ${{ github.sha }}" \
             --prerelease \
-            ./artifacts/*.tar.gz
+            ./artifacts
