--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,8 @@ scru128 = { version = "3", features = ["serde"] }
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.10.1"
+
+
+# Target specific dependencies for musl builds to vendor OpenSSL
+[target.aarch64-unknown-linux-musl.dependencies]
+openssl = { version = "0.10.69", features = ["vendored"] }
