--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -18,10 +18,20 @@ jobs:
 
       # 2) Boot the Dagger Engine inside the runner, pinned to 0.18.10
       - name: Setup Dagger
-        uses: dagger/dagger-for-github@8.0.0    # correct tag per GitHub Releases :contentReference[oaicite:2]{index=2}
+        uses: dagger/dagger-for-github@v8.0.0
         with:
-          version: "0.18.10"                     # matches registry.dagger.io/engine:v0.18.10 :contentReference[oaicite:3]{index=3}
+          version: "0.18.10"
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+
+      # 2.5) Pre-pull Dagger engine image to avoid registry issues
+      - name: Pre-pull Dagger Engine
+        run: |
+          echo "Pre-pulling Dagger engine image..."
+          docker pull registry.dagger.io/engine:v0.18.10 || {
+            echo "Failed to pull engine image, retrying..."
+            sleep 5
+            docker pull registry.dagger.io/engine:v0.18.10
+          }
 
       # 3) Build all binaries with Dagger
       - name: Build All Binaries
