--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -18,7 +18,7 @@ jobs:
 
       # 2) Boot the Dagger Engine inside the runner, pinned to 0.18.10
       - name: Setup Dagger
-        uses: dagger/dagger-for-github@v8.0.0
+        uses: dagger/dagger-for-github@8.0.0
         with:
           version: "0.18.10"
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
