--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -1,14 +1,14 @@
 name: release-binaries
 
 on:
-  push: {}
+  push: {}            # run on every branch/tag push so you can test before merging to main
 
 permissions:
-  contents: write   # needed by gh release
+  contents: write      # required for gh release
 
 jobs:
   #-----------------------------------------------------------
-  # 1. Build matrix – one VM per target
+  # 1. Build matrix – each row runs on its own VM
   #-----------------------------------------------------------
   build:
     name: Build ${{ matrix.target }}
@@ -34,10 +34,10 @@ jobs:
             artifact: http-nu-linux-amd64.tar.gz
 
     steps:
-      # 1) Source
+      # 1) Check out source
       - uses: actions/checkout@v4
 
-      # 2) (optional) restore Dagger cache to speed re‑runs
+      # 2) (optional) restore Dagger BuildKit cache
       - name: Restore Dagger cache
         uses: actions/cache@v4
         with:
@@ -46,24 +46,25 @@ jobs:
           restore-keys: |
             dagger-${{ runner.os }}-${{ matrix.target }}-
 
-      # 3) Boot the Engine
+      # 3) Boot the Dagger engine
       - name: Setup Dagger
         uses: dagger/dagger-for-github@8.0.0
         with:
           version: "0.18.10"
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
-      # 4) (defensive) pre‑pull Engine image
-      - run: docker pull registry.dagger.io/engine:v0.18.10
+      # 4) Defensive: pre‑pull the engine image
+      - name: Pre‑pull Dagger Engine
+        run: docker pull registry.dagger.io/engine:v0.18.10
 
-      # 5) Run **one** Dagger build function, export artefact
+      # 5) Run one Dagger build function and export artefact
       - name: Build with Dagger
         env:
           DAGGER_CLOUD_TOKEN: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         run: |
           dagger -c '${{ matrix.dagger_fn }} $(upload ".") | export ./artifacts'
 
-      # 6) Save artefact for downstream job
+      # 6) Upload artefact for fan‑in job
       - name: Upload artefact
         uses: actions/upload-artifact@v4
         with:
@@ -71,31 +72,31 @@ jobs:
           path: ./artifacts/${{ matrix.artifact }}
 
   #-----------------------------------------------------------
-  # 2. Gather artefacts & create prerelease
+  # 2. Fan‑in job – gather artefacts and create prerelease
   #-----------------------------------------------------------
   release:
-    name: Create GitHub prerelease
+    name: Create prerelease
     runs-on: ubuntu-latest
-    needs: build      # waits for every target
+    needs: build
+
     steps:
       - name: Download artefacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Create prerelease
+      - name: Create GitHub prerelease
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           timestamp=$(date '+%Y-%m-%d-%H-%M-%S')
           tag="experiment-${timestamp}"
 
-          # list contents for debugging
-          find artifacts -maxdepth 2 -type f -print
+          # List files for log visibility
+          find artifacts -type f -print
 
           gh release create "$tag" \
             --title "Experiment Release $timestamp" \
             --notes "Automated experiment build from commit ${{ github.sha }}" \
             --prerelease \
             artifacts/**/*
-
