--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -59,10 +59,11 @@ jobs:
 
       # 5) Run one Dagger build function and export artefact
       - name: Build with Dagger
-        env:
-          DAGGER_CLOUD_TOKEN: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-        run: |
-          dagger -c '${{ matrix.dagger_fn }} $(upload ".") | export ./artifacts'
+        uses: dagger/dagger-for-github@8.0.0
+        with:
+          version: "0.18.10"
+          call: ${{ matrix.dagger_fn }} --src upload --src . | export ./artifacts
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
       # 6) Upload artefact for fan‑in job
       - name: Upload artefact
