--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -37,8 +37,8 @@ jobs:
       # 1) Check out source
       - uses: actions/checkout@v4
 
-      # 2) (optional) restore Dagger BuildKit cache
-      - name: Restore Dagger cache
+      # 2) Cache Dagger BuildKit cache (restore and save)
+      - name: Cache Dagger
         uses: actions/cache@v4
         with:
           path: ~/.cache/dagger
@@ -62,7 +62,7 @@ jobs:
         uses: dagger/dagger-for-github@8.0.0
         with:
           version: "0.18.10"
-          call: ${{ matrix.dagger_fn }} --src upload --src . | export ./artifacts
+          call: ${{ matrix.dagger_fn }} --src upload --src . export --path ./artifacts/${{ matrix.artifact }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
       # 6) Upload artefact for fan‑in job
@@ -85,6 +85,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: artifacts
+          merge-multiple: true
 
       - name: Create GitHub prerelease
         env:
