--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -78,9 +78,10 @@ jobs:
   release:
     name: Create prerelease
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
 
     steps:
+      - uses: actions/checkout@v4
       - name: Download artefacts
         uses: actions/download-artifact@v4
         with:
