--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -100,4 +100,5 @@ jobs:
           prerelease: ${{ contains(github.ref_name, '-dev.') }}
           draft:      false
           body_path:  changes/${{ github.ref_name }}.md
+          body:       Release build from commit ${{ github.sha }}
           files: artifacts/*
