--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ rustls = "0.23.23"
 rustls-pemfile = "2.2.0"
 hyper-staticfile = "0.10.1"
 scru128 = { version = "3", features = ["serde"] }
+hyper-reverse-proxy = "0.5.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
