--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ http-serde = "2.1.1"
 http = "1.1.0"
 http-body-util = "0.1"
 hyper = { version = "1", features = ["full"] }
-hyper-util = { version = "0.1", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full", "server-auto"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 tokio-util = { version = "0.7", features = ["io"] }
@@ -42,8 +42,12 @@ nu-protocol = "0.105.1"
 tokio-rustls = "0.26.1"
 rustls = "0.23.23"
 rustls-pemfile = "2.2.0"
-hyper-staticfile = "0.10.1"
 scru128 = { version = "3", features = ["serde"] }
+axum = { version = "0.8.4", features = ["http1", "http2"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tower-http = { version = "0.6.6", features = ["fs"] }
+tower = "0.5.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
