--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ nu-command = "0.105.1"
 nu-engine = "0.105.1"
 nu-parser = "0.105.1"
 nu-protocol = "0.105.1"
+ctrlc = "3.4"
 tokio-rustls = "0.26.1"
 rustls = "0.23.23"
 rustls-pemfile = "2.2.0"
@@ -52,6 +53,9 @@ tower = "0.5.2"
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.10.1"
+assert_cmd = "2.0"
+reqwest = { version = "0.12", features = ["json"] }
+nix = { version = "0.30", features = ["signal", "process"] }
 
 
 # Target specific dependencies for musl builds to vendor OpenSSL
