--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ tempfile = "3.10.1"
 assert_cmd = "2.0"
 reqwest = { version = "0.12", features = ["json"] }
 nix = { version = "0.30", features = ["signal", "process"] }
+sysinfo = "0.30.12"
 
 
 # Target specific dependencies for musl builds to vendor OpenSSL
