--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,21 +40,21 @@ nu-engine = "0.105.1"
 nu-parser = "0.105.1"
 nu-protocol = "0.105.1"
 ctrlc = "3.4"
-tokio-rustls = "0.26.1"
-rustls = "0.23.23"
-rustls-pemfile = "2.2.0"
+rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
+rustls-pemfile = "2.1.0"
 scru128 = { version = "3", features = ["serde"] }
 axum = { version = "0.8.4", features = ["http1", "http2"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
 tower = "0.5.2"
+axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+
 
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.10.1"
 assert_cmd = "2.0"
-reqwest = { version = "0.12", features = ["json"] }
 nix = { version = "0.30", features = ["signal", "process"] }
 sysinfo = "0.30.12"
 
