--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
 tower = "0.5.2"
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+axum-reverse-proxy = "1.0.2"
 
 
 [dev-dependencies]
