--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
 tower = "0.5.2"
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
+
 
 
 [dev-dependencies]
@@ -60,6 +62,4 @@ sysinfo = "0.30.12"
 
 
 
-# Target specific dependencies for musl builds to vendor OpenSSL
-[target.aarch64-unknown-linux-musl.dependencies]
-openssl = { version = "0.10.69", features = ["vendored"] }
+
