--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -2,8 +2,10 @@ name: release-binaries
 
 on:
   push:
+    branches:
+      - '**'
     tags:
-      - 'v*'            # run only when a tag starting with 'v' is pushed
+      - 'v*'
 
 permissions:
   contents: write      # required for gh release
@@ -78,7 +80,8 @@ jobs:
   # 2. Fan-in job - gather artifacts and create prerelease
   #-----------------------------------------------------------
   release:
-    name: Create prerelease
+    name: Create Release
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: build
 
