fix(ci): populate change log, if empty on release tag push (#18)

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -93,6 +93,20 @@ jobs:
           path: artifacts
           merge-multiple: true
 
+      - name: Generate changelog if missing
+        run: |
+          tag="${{ github.ref_name }}"
+          changelog="changes/${tag}.md"
+          if [ ! -f "$changelog" ]; then
+            # Get the previous tag by sorting all tags and finding the one before current
+            previous_tag=$(git tag --list 'v*' --sort=-version:refname | grep -A1 "^${tag}$" | tail -1)
+            if [ -n "$previous_tag" ] && [ "$previous_tag" != "$tag" ]; then
+              git log --format=%s "${previous_tag}..${tag}" > "$changelog"
+            else
+              git log --format=%s "${tag}" > "$changelog"
+            fi
+          fi
+
       - name: Publish release
         uses: softprops/action-gh-release@v2
         env:
