--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "http-nu"
 version = "0.5.0"
 edition = "2021"
+rust-version = "1.88.0"
 description = "Serve a Nushell closure over HTTP."
 license = "MIT"
 repository = "https://github.com/cablehead/http-nu"
