--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
 tower = { version = "0.5.2", features = ["util"] }
 ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
+brotli = "8"
 
 
 
@@ -58,6 +59,7 @@ tempfile = "3.10.1"
 assert_cmd = "2.0"
 nix = { version = "0.30", features = ["signal", "process"] }
 sysinfo = "0.30.12"
+brotli = "8"
 
 
 
