--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ tower-http = { version = "0.6.6", features = ["fs"] }
 tower = { version = "0.5.2", features = ["util"] }
 ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
 brotli = "8"
+http_encoding_headers = "0.2.0"
+headers = "0.4.1"
 
 
 
