feat: support dynamic script updates via stdin
Enables hot-reloading of Nushell request handlers by reading scripts from
stdin (null-delimited). Uses arc-swap for lock-free atomic engine updates,
ensuring in-flight requests complete with their original script while new
requests use the updated version.

When closure argument is "-", server reads initial script from stdin up to
null byte, then spawns background task to continuously read and apply new
scripts.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ nu-engine = "0.109.1"
 nu-parser = "0.109.1"
 nu-protocol = "0.109.1"
 ctrlc = "3.4"
+arc-swap = "1.7"
 rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
 rustls-pemfile = "2.1.0"
 tokio-rustls = "0.26.0"
