fix: propagate interrupt signal to dynamically reloaded engines
- Connect interrupt signal to new engines on script update so Ctrl-C
  properly interrupts jobs in reloaded scripts
- Add structured JSON logging for stdin read errors
- Strip ANSI escape codes from JSON error fields using nu_utils

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ brotli = "8"
 http_encoding_headers = "0.2.0"
 headers = "0.4.1"
 minijinja = { version = "2", features = ["json", "urlencode", "loop_controls"] }
+nu-utils = "0.109.1"
 
 
 
