--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ nu-engine = "0.109.1"
 nu-parser = "0.109.1"
 nu-protocol = "0.109.1"
 ctrlc = "3.4"
+arc-swap = "1.7"
 rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
 rustls-pemfile = "2.1.0"
 tokio-rustls = "0.26.0"
@@ -54,6 +55,7 @@ brotli = "8"
 http_encoding_headers = "0.2.0"
 headers = "0.4.1"
 minijinja = { version = "2", features = ["json", "urlencode", "loop_controls"] }
+nu-utils = "0.109.1"
 
 
 
