--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
 rustls-pemfile = "2.1.0"
 tokio-rustls = "0.26.0"
 scru128 = { version = "3", features = ["serde"] }
+log = "0.4"
+miette = "7"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
