feat: add HTML DSL module with router tests
- Add comprehensive HTML DSL module (src/stdlib/html/mod.nu)
  - All standard HTML5 tags with h- prefix to avoid conflicts
  - Void/self-closing tags strict (attrs only, no children)
  - Regular tags support flexible args (no args, attrs, text, attrs+text, attrs+closure)
  - Exported parse-node-args helper for custom tags
  - Eager rendering approach for optimal performance
- Add standalone router and HTML tests (tests/test_router.nu, tests/test_html.nu)
  - Tests use relative imports to work with vanilla nu
- Update CI workflow to install Nushell 0.109.1
- Update check.sh to run nu tests before cargo checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,11 @@ jobs:
       with:
         deno-version: v2.x
 
+    - name: Install Nushell
+      uses: hustcer/setup-nu@v3
+      with:
+        version: "0.109.1"
+
     - name: Install Rust
       run: |
         rustup update stable
