--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,17 +56,21 @@ ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
 brotli = "8"
 http_encoding_headers = "0.2.0"
 headers = "0.4.1"
-minijinja = { version = "2", features = ["json", "urlencode", "loop_controls"] }
+minijinja = { version = "2", features = ["json", "urlencode", "loop_controls", "loader"] }
 nu-utils = "0.109.1"
+typetag = "0.2"
+xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 
 
 
 [dev-dependencies]
 tempfile = "3.10.1"
 assert_cmd = "2.0"
+predicates = "3"
 nix = { version = "0.30", features = ["signal", "process"] }
 sysinfo = "0.30.12"
 brotli = "8"
+minijinja = "2"
 
 
 
