--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[workspace]
+members = [".", "tests/test_plugin"]
+
 [package]
 name = "http-nu"
 version = "0.6.0"
@@ -39,7 +42,8 @@ nu-cmd-extra = "0.109.1"
 nu-command = "0.109.1"
 nu-engine = "0.109.1"
 nu-parser = "0.109.1"
-nu-protocol = "0.109.1"
+nu-plugin-engine = "0.109.1"
+nu-protocol = { version = "0.109.1", features = ["plugin"] }
 ctrlc = "3.4"
 arc-swap = "1.7"
 rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
