--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,13 @@ tokio-rustls = "0.26.0"
 scru128 = { version = "3", features = ["serde"] }
 log = "0.4"
 miette = "7"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing = { version = "0.1.41", features = ["valuable"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "valuable"] }
+valuable = { version = "0.1", features = ["derive"] }
+valuable-serde = "0.1"
+indicatif = "0.17"
+chrono = "0.4"
+ipnet = "2"
 tower-http = { version = "0.6.6", features = ["fs"] }
 tower = { version = "0.5.2", features = ["util"] }
 ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
