--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,8 +69,11 @@ minijinja = { version = "2", features = ["json", "urlencode", "loop_controls", "
 nu-utils = "0.109.1"
 typetag = "0.2"
 xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
+syntect = "5.3.0"
+syntect-assets = "0.23.6"
 
-
+[build-dependencies]
+syntect = "5.3.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
