refactor: replace indicatif with crossterm, add RequestGuard for abort handling
- Replace indicatif with crossterm for human-readable log output
- Active requests shown in updateable zone at bottom, completed scroll up
- Token bucket rate limiting (burst 40, refill 20/sec)
- RequestGuard ensures Complete event fires even on client abort
- Suppress body_write_aborted errors (normal for client disconnect)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ rustls-pemfile = "2.1.0"
 tokio-rustls = "0.26.0"
 scru128 = { version = "3", features = ["serde"] }
 miette = "7"
-indicatif = "0.17"
+crossterm = "0.29"
 chrono = "0.4"
 ipnet = "2"
 tower-http = { version = "0.6.6", features = ["fs"] }
