feat: add -w/--watch flag for file watching and hot reload
New `-w` / `--watch` flag enables automatic hot-reload:

File watch mode:
  `http-nu :3001 -w ./serve.nu`
  Watches the script's directory for changes and hot-reloads on any
  file modification. Useful during development.

Stdin hot-reload:
  `http-nu :3001 - -w`
  Reads null-terminated scripts from stdin for programmatic hot-reload.
  Without `-w`, stdin reads once (one-shot).

Implementation:
- Uses `notify` crate for cross-platform file system watching
- 100ms debounce to coalesce rapid file system events
- Watches recursively, so changes to included files trigger reload
- `-w` is incompatible with `-c` (inline commands)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,8 @@ xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 syntect = "5.3.0"
 syntect-assets = "0.23.6"
 pulldown-cmark = "0.12.2"
+notify = "8"
+notify-debouncer-mini = "0.6"
 
 [build-dependencies]
 syntect = "5.3.0"
