--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,8 +70,15 @@ pulldown-cmark = "0.12.2"
 notify = "8"
 notify-debouncer-mini = "0.6"
 
+# Optional: cross.stream embedded store (enabled with --store flag)
+cross-stream = { version = "0.7.1", optional = true }
+
 [build-dependencies]
 syntect = "5.3.0"
+
+[features]
+default = ["store"]
+store = ["dep:cross-stream"]
 
 [dev-dependencies]
 tempfile = "3.10.1"
