--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,8 +71,7 @@ notify = "8"
 notify-debouncer-mini = "0.6"
 
 [dependencies.cross-stream]
-git = "https://github.com/cablehead/xs"
-branch = "windows-support"
+version = "0.8.0"
 optional = true
 
 [features]
