--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full", "server-auto"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
-tokio-util = { version = "0.7", features = ["io"] }
+tokio-util = { version = "0.7", features = ["io", "compat"] }
 
 bytes = "1.6.0"
 url = "2.5.0"
@@ -70,15 +70,19 @@ pulldown-cmark = "0.12.2"
 notify = "8"
 notify-debouncer-mini = "0.6"
 
-# Optional: cross.stream embedded store (enabled with --store flag)
-cross-stream = { version = "0.7.1", optional = true }
+[dependencies.cross-stream]
+version = "0.8.0"
+optional = true
+
+[features]
+default = ["cross-stream"]
+
+[target.'cfg(windows)'.dependencies]
+win_uds = "=0.2.0"
 
 [build-dependencies]
 syntect = "5.3.0"
 
-[features]
-default = ["store"]
-store = ["dep:cross-stream"]
 
 [dev-dependencies]
 tempfile = "3.10.1"
