feat: abort SSE connections on hot reload
SSE streams now return an error on reload instead of ending cleanly,
causing hyper to abort the connection. This triggers client retry
behavior (e.g., Datastar reconnects automatically).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ hyper-util = { version = "0.1", features = ["full", "server-auto"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 tokio-util = { version = "0.7", features = ["io", "compat"] }
+futures-util = "0.3"
 
 bytes = "1.6.0"
 url = "2.5.0"
