feat: add cross.stream-powered branding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ name = "http-nu"
 version = "0.10.2"
 edition = "2021"
 rust-version = "1.88.0"
-description = "The surprisingly performant, Datastar-ready, Nushell-scriptable HTTP server that fits in your back pocket."
+description = "The surprisingly performant, Nushell-scriptable, cross.stream-powered, Datastar-ready HTTP server that fits in your back pocket."
 license = "MIT"
 repository = "https://github.com/cablehead/http-nu"
 readme = "README.md"
